--- a/personal.html
+++ b/personal.html
@@ -6,7 +6,7 @@
 	<link rel="icon" href="favicon.ico">
 	<link rel="stylesheet" href="html5reset.css">
 	<link rel="stylesheet" href="style.css">
-	<tite>Family Page</title>
+	<tite>Traveling with my Family Across the Country!</title>
 </head>
 <body>
 	<header>
