--- a/personal.html
+++ b/personal.html
@@ -6,7 +6,7 @@
 	<link rel="icon" href="favicon.ico">
 	<link rel="stylesheet" href="html5reset.css">
 	<link rel="stylesheet" href="style.css">
-	<tite>Traveling with my Family Across the Country!</title>
+	<tite>Family Page</title>
 </head>
 <body>
 	<header>
@@ -20,14 +20,14 @@
 	   <nav>
 	</header>
 
-	<h1>Family</h1>
+	<h1>Family Travels</h1>
 	
 	<main>
 	<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.<p>
 		<img src= "wisconsin_dells.jpg" alt= "Photo at Sasquatch Lake" width="25"/>
 		<img src= "badlands.jpg" alt= "Photo in front of Badlands Visitor Center" width="1000"/>
 		<img src= "falling.jpg" alt= "Son dramatically Posing off a Cliff!"width="25"/>
-		<img src= "jewel_cave.jpg" alt= "Kids in Front of Jewel Cave Sign" width="1000"/>
+		<img src= "jewel_cave.JPG" alt= "Kids in Front of Jewel Cave Sign" width="1000"/>
 	</main>
 	Colleen van Lent &copy; 2020
 </body>
