--- a/personal.html
+++ b/personal.html
@@ -9,7 +9,7 @@
 	<title>Family Page</title>
 </head>
 <body>
-	<header>
+	<head>
 	  <nav>
 		<ul>
 			<li><a href = "index.html">About Me</a></li>
@@ -18,7 +18,7 @@
 			<li><a href = "si.umich.edu">UMSI</a></li>
 		</ul>
 	   <nav>
-	</header>
+	</head>
 
 	<h1>Family Travels</h1>
 	
