--- a/personal.html
+++ b/personal.html
@@ -20,12 +20,12 @@
 	   <nav>
 	</head>
 	
-<body>
-	<h1>Family Travels</h1>
 </body>
+	<h1>Family Travels</h1>
+<body>
 	<main>
 		<div>
-	<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.<p>
+	<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.</p>
 		<img src= "wisconsin_dells.jpg" alt= "Photo at Sasquatch Lake" width="25"/>
 		<img src= "badlands.jpg" alt= "Photo in front of Badlands Visitor Center" width="1000"/>
 		<img src= "falling.jpg" alt= "Son dramatically Posing off a Cliff!" width="25"/>
