--- a/personal.html
+++ b/personal.html
@@ -17,20 +17,19 @@
 			<li><a href = "random.html">Random</a></li>
 			<li><a href = "si.umich.edu">UMSI</a></li>
 		</ul>
-	   <nav>
+	   </nav>
 	</head>
 	
 </body>
-	<h1>Family Travels</h1>
 <body>
 	<main>
-		<div>
+		<h1>Family Travels</h1>
+		
 	<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.</p>
 		<img src= "wisconsin_dells.jpg" alt= "Photo at Sasquatch Lake" width="25"/>
 		<img src= "badlands.jpg" alt= "Photo in front of Badlands Visitor Center" width="1000"/>
 		<img src= "falling.jpg" alt= "Son dramatically Posing off a Cliff!" width="25"/>
 		<img src= "jewel_cave.JPG" alt= "Kids in Front of Jewel Cave Sign" width="1000"/>
-		</div>
 	</main>
 	Colleen van Lent &copy; 2020
 </body>
