--- a/personal.html
+++ b/personal.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<header>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="favicon.ico">
 	<link rel="stylesheet" href="html5reset.css">
 	<link rel="stylesheet" href="style.css">
 	<title>Family Page</title>
-</head>
+</header>
 <body>
-	<head>
+	<header>
 	  <nav>
 		<ul>
 			<li><a href = "index.html">About Me</a></li>
@@ -18,10 +18,8 @@
 			<li><a href = "si.umich.edu">UMSI</a></li>
 		</ul>
 	   </nav>
-	</head>
+	</header>
 	
-</body>
-<body>
 	<main>
 		<h1>Family Travels</h1>
 		
@@ -31,7 +29,9 @@
 		<img src= "falling.jpg" alt= "Son dramatically Posing off a Cliff!" width="25"/>
 		<img src= "jewel_cave.JPG" alt= "Kids in Front of Jewel Cave Sign" width="1000"/>
 	</main>
-	Colleen van Lent &copy; 2020
+	<footer>
+		<p>Colleen van Lent &copy; 2020</p>
+	</footer>
 </body>
 </html>
 
