--- a/personal.html
+++ b/personal.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<header>
+<head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="icon" href="favicon.ico">
 	<link rel="stylesheet" href="html5reset.css">
 	<link rel="stylesheet" href="style.css">
 	<title>Family Page</title>
-</header>
+</head>
+	
 <body>
 	<header>
 	  <nav>
