--- a/personal.html
+++ b/personal.html
@@ -11,14 +11,15 @@
 	
 <body>
 	<header>
-	  <nav>
+		<nav>
 		<ul>
 			<li><a href = "index.html">About Me</a></li>
 			<li><a href = "personal.html">Family</a></li>
 			<li><a href = "random.html">Random</a></li>
 			<li><a href = "si.umich.edu">UMSI</a></li>
 		</ul>
-	   </nav>
+	  	</nav>
+	<h1>Family Travels</h1>
 	</header>
 	
 	<main>
