--- a/personal.html
+++ b/personal.html
@@ -3,28 +3,26 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="favicon.ico">
-	<link rel="stylesheet" href="html5reset.css">
-	<link rel="stylesheet" href="style.css">
 	<link rel="icon" href="images/favicon.ico">
+	<link rel="stylesheet" href="css/html5reset.css">
+	<link rel="stylesheet" href="css/style.css">
 	<title>Family Page</title>
 </head>
 	
 <body>
 	<header>
 		<nav>
-		<ul>
-			<li><a href = "index.html">About Me</a></li>
-			<li><a href = "personal.html">Family</a></li>
-			<li><a href = "random.html">Random</a></li>
-			<li><a href = "si.umich.edu">UMSI</a></li>
-		</ul>
+			<ul>
+				<li><a href = "index.html">About Me</a></li>
+				<li><a href = "personal.html">Family</a></li>
+				<li><a href = "random.html">Random</a></li>
+				<li><a href = "si.umich.edu">UMSI</a></li>
+			</ul>
 	  	</nav>
+		<h1>Family Travels</h1>
 	</header>
 	
 	<main>
-		
-	<h1>Family Travels</h1>
 		
 	<p>In 2016 I loaded my kids into the minivan and took them on a drive across the Northern midwest states.  We went to Wisconsin Dells, the Badlands, Mount Rushmore, Jewel Cave, and Custer State Park.</p>
 		<img src= "images/wisconsin_dells.jpg" alt= "Photo at Sasquatch Lake" width="25"/>
