--- a/random.html
+++ b/random.html
@@ -15,10 +15,10 @@
 		<main>
 		<nav>
 			<ul>
-				<li>About Me</li>
-				<li>Family</li>
-				<li>Random</li>
-				<li>UMSI</li>
+				<li><a href = "index.html">About Me</a></li>
+				<li><a href = "personal.html">Family</a></li>
+				<li><a href = "random.html">Random</a></li>
+				<li><a href = "si.umich.edu">UMSI</a></li>
 			</ul>
 		</nav>
 		</main>
