--- a/personal.html
+++ b/personal.html
@@ -31,7 +31,7 @@
 		<img src= "images/jewel_cave.JPG" alt= "Kids in Front of Jewel Cave Sign" width="1000"/>
 	</main>
 	<footer>
-		<p>Colleen van Lent &copy; 2020</p>
+		<h2>Colleen van Lent &copy; 2020</h2>
 	</footer>
 </body>
 </html>
