--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 	<!-- Footer is a sematic tag page that aids readability -->
 	<footer>
-		<h6>Colleen van Lent &copy; 2020</h6>
+		<p>Colleen van Lent &copy; 2020</p>
 	</footer>
 </body>
 </html>
