--- a/random.html
+++ b/random.html
@@ -35,7 +35,7 @@
 	<p>Using the Piazza site is another great way to stay on top of your classwork</p>
 
 	<footer>
-		<h6>Colleen van Lent &copy; 2020</h6>
+		<p>Colleen van Lent &copy; 2020</p>
 	</footer>
 </body>
 </html>
